--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ img {
 /*Header*/
 header {
   margin: 10px 80px 0px 80px;
+  padding:0rem
 }
 .navigation{
   display: grid;
@@ -119,6 +120,11 @@ form i {
 }
 #loupe {
   visibility: hidden;
+}
+header form+p{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 header p span {
   border: solid 2px #f2f2f2;
@@ -385,17 +391,38 @@ footer {
 }
 
 
+/*facultatif*/
+@media screen and (min-width:1280px) and (max-width:1460px){
+  .headernav{
+    padding-left: 400px;
+    padding-right: 40px;
+  }
+}
 
+@media screen and (min-width:768px) and (max-width:1280px){
+  .headernav{
+    padding-left: 350px;
+    padding-right: 50px;
+  }
+}
+@media screen and (max-width:1144px){
+  #mobile_filtres{
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction:colunm;
+  }
+}
+/**/
 
 
 @media screen and (min-width: 378px) and (max-width:768px){
   header {
     margin: 0;
     padding-top: 30px;
-    padding-left: 75px;
-    padding-right: 75px;
     width: auto;
     overflow-x: hidden;
+    margin-left: 30px;
+    margin-right: 30px;
   }
   body {
     margin: 0;
@@ -419,8 +446,15 @@ footer {
     justify-content: space-around;
     align-items: center;
     grid-area: navbar;
-    padding-left: 100px;
+    padding-left: 50px;
     padding-right: 40px;
+  }
+  #mobile_filtres{
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  .filtre{
+    padding-right: 10px;
   }
   
   /*Body- Hébergements*/
@@ -439,7 +473,7 @@ footer {
     height: auto;
     width: 600px;
     border-radius: 20px;
-    padding: 30px 30px 30px 30px;
+    padding: 30px 30px 90px 30px;
     margin:0;
   }
   
@@ -525,9 +559,11 @@ footer {
   align-items: center;
   width: 100%;
   margin: auto;
+  padding-bottom: 0;
+  margin-bottom: 0;
 }
 .h3desktop {
-  visibility: hidden;
+  display: none;
 }
 .h3mobile {
   display: initial;
@@ -625,9 +661,6 @@ footer {
 }
 
 
-
-
-
 @media screen and (max-width:376px) {
   body {
     margin: 0;
@@ -647,8 +680,8 @@ footer {
     justify-content: space-between;
     align-items: center;
     grid-area: navbar;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
   .inscription{
     grid-area: inscription;
@@ -758,7 +791,13 @@ footer {
     padding: 20px 20px 20px 20px;
     font-weight: 600;
   }
-
+  #mobile_filtres{
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  .filtre{
+    padding-right: 10px;
+  }
   /*body*/
   section {
     display: flex;
@@ -866,7 +905,7 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 660px;
+    width: auto;
   }
   .h3desktop {
     visibility: hidden;
@@ -879,16 +918,16 @@ footer {
   }
   .port img {
     height: 350px;
-    width: 350px;
+    width: 750px;
     border-bottom: solid 110px white;
     box-shadow: 10px 10px 10px #f2f2f2;
     border-radius: 35px;
-    margin: 0px 0px 25px 0px;
+    margin: 30px 0px 25px 0px;
   }
 
   .fort img {
     height: 350px;
-    width: 350px;
+    width: 750px;
     border-bottom: solid 110px white;
     box-shadow: 10px 10px 10px #f2f2f2;
     border-radius: 35px;
@@ -897,7 +936,7 @@ footer {
 
   .iles img {
     height: 350px;
-    width: 350px;
+    width: 750px;
     border-bottom: solid 110px white;
     box-shadow: 10px 10px 10px #f2f2f2;
     border-radius: 35px;
@@ -905,7 +944,7 @@ footer {
   }
   .calanques img {
     height: 350px;
-    width: 350px;
+    width: 750px;
     border-bottom: solid 110px white;
     box-shadow: 10px 10px 10px #f2f2f2;
     border-radius: 35px;
@@ -913,7 +952,7 @@ footer {
   }
   .dame img {
     height: 350px;
-    width: 350px;
+    width: 750px;
     border-bottom: solid 110px white;
     box-shadow: 10px 10px 10px #f2f2f2;
     border-radius: 35px;
@@ -921,7 +960,7 @@ footer {
   }
   .longchamps img {
     height: 350px;
-    width: 350px;
+    width: 750px;
     border-bottom: solid 110px white;
     box-shadow: 10px 10px 10px #f2f2f2;
     border-radius: 35px;
@@ -966,6 +1005,9 @@ footer {
       margin-bottom: 30px;
     }
 }
+
+
+
 
 
 
